--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <form method="post" action="index.html">    
                 <fieldset>
 
-                    <legend>Google Maps API v3: Busca de endereço e Autocomplete - Demo</legend>    
+                    <legend>Google Maps API v3: Busca de endereço e Autocomplete - Demo - Silveira</legend>    
             
                     <div class="campos">
                         <label for="txtEndereco">Endereço:</label>
